--- a/clean_spm.ipynb
+++ b/clean_spm.ipynb
@@ -774,6 +774,7 @@
     "import numpy as np\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
+    "import plotly.figure_factory as ff\n",
     "import numpy as np\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -795,12 +796,387 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lon</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>Z</th>\n",
+       "      <th>parlimen</th>\n",
+       "      <th>code_parlimen</th>\n",
+       "      <th>state</th>\n",
+       "      <th>district</th>\n",
+       "      <th>code_state</th>\n",
+       "      <th>code_district</th>\n",
+       "      <th>code_state_district</th>\n",
+       "      <th>parlimen_z</th>\n",
+       "      <th>str_count</th>\n",
+       "      <th>estimated_str</th>\n",
+       "      <th>id</th>\n",
+       "      <th>clinic_name</th>\n",
+       "      <th>address</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>area</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>117.002916</td>\n",
+       "      <td>7.353750</td>\n",
+       "      <td>5.966960</td>\n",
+       "      <td>P.167 Kudat</td>\n",
+       "      <td>P.167</td>\n",
+       "      <td>Sabah</td>\n",
+       "      <td>Kudat</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12_13</td>\n",
+       "      <td>129387.352540</td>\n",
+       "      <td>31847</td>\n",
+       "      <td>1.468689</td>\n",
+       "      <td>964</td>\n",
+       "      <td>KLINIK DR ZULFIKAR</td>\n",
+       "      <td>LOT 71, GROUND FLOOR, WISMA TELIPOK RIA, JALAN...</td>\n",
+       "      <td>6.108500</td>\n",
+       "      <td>116.205800</td>\n",
+       "      <td>164.075215</td>\n",
+       "      <td>1378.634642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>117.186250</td>\n",
+       "      <td>7.353750</td>\n",
+       "      <td>26.301926</td>\n",
+       "      <td>P.167 Kudat</td>\n",
+       "      <td>P.167</td>\n",
+       "      <td>Sabah</td>\n",
+       "      <td>Kudat</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12_13</td>\n",
+       "      <td>129387.352540</td>\n",
+       "      <td>31847</td>\n",
+       "      <td>6.473874</td>\n",
+       "      <td>964</td>\n",
+       "      <td>KLINIK DR ZULFIKAR</td>\n",
+       "      <td>LOT 71, GROUND FLOOR, WISMA TELIPOK RIA, JALAN...</td>\n",
+       "      <td>6.108500</td>\n",
+       "      <td>116.205800</td>\n",
+       "      <td>175.768384</td>\n",
+       "      <td>1378.634642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>117.211250</td>\n",
+       "      <td>7.353750</td>\n",
+       "      <td>36.780006</td>\n",
+       "      <td>P.167 Kudat</td>\n",
+       "      <td>P.167</td>\n",
+       "      <td>Sabah</td>\n",
+       "      <td>Kudat</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12_13</td>\n",
+       "      <td>129387.352540</td>\n",
+       "      <td>31847</td>\n",
+       "      <td>9.052916</td>\n",
+       "      <td>964</td>\n",
+       "      <td>KLINIK DR ZULFIKAR</td>\n",
+       "      <td>LOT 71, GROUND FLOOR, WISMA TELIPOK RIA, JALAN...</td>\n",
+       "      <td>6.108500</td>\n",
+       "      <td>116.205800</td>\n",
+       "      <td>177.482178</td>\n",
+       "      <td>1378.634642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>117.219583</td>\n",
+       "      <td>7.353750</td>\n",
+       "      <td>47.685280</td>\n",
+       "      <td>P.167 Kudat</td>\n",
+       "      <td>P.167</td>\n",
+       "      <td>Sabah</td>\n",
+       "      <td>Kudat</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12_13</td>\n",
+       "      <td>129387.352540</td>\n",
+       "      <td>31847</td>\n",
+       "      <td>11.737106</td>\n",
+       "      <td>964</td>\n",
+       "      <td>KLINIK DR ZULFIKAR</td>\n",
+       "      <td>LOT 71, GROUND FLOOR, WISMA TELIPOK RIA, JALAN...</td>\n",
+       "      <td>6.108500</td>\n",
+       "      <td>116.205800</td>\n",
+       "      <td>178.059288</td>\n",
+       "      <td>1378.634642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>117.227916</td>\n",
+       "      <td>7.353750</td>\n",
+       "      <td>46.979156</td>\n",
+       "      <td>P.167 Kudat</td>\n",
+       "      <td>P.167</td>\n",
+       "      <td>Sabah</td>\n",
+       "      <td>Kudat</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12_13</td>\n",
+       "      <td>129387.352540</td>\n",
+       "      <td>31847</td>\n",
+       "      <td>11.563303</td>\n",
+       "      <td>964</td>\n",
+       "      <td>KLINIK DR ZULFIKAR</td>\n",
+       "      <td>LOT 71, GROUND FLOOR, WISMA TELIPOK RIA, JALAN...</td>\n",
+       "      <td>6.108500</td>\n",
+       "      <td>116.205800</td>\n",
+       "      <td>178.639274</td>\n",
+       "      <td>1378.634642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>383770</th>\n",
+       "      <td>110.561250</td>\n",
+       "      <td>0.870417</td>\n",
+       "      <td>20.286165</td>\n",
+       "      <td>P.199 Serian</td>\n",
+       "      <td>P.199</td>\n",
+       "      <td>Sarawak</td>\n",
+       "      <td>Tebedu</td>\n",
+       "      <td>13</td>\n",
+       "      <td>32</td>\n",
+       "      <td>13_32</td>\n",
+       "      <td>76561.711928</td>\n",
+       "      <td>43064</td>\n",
+       "      <td>11.410448</td>\n",
+       "      <td>911</td>\n",
+       "      <td>17TH MILES FAMILY CLINIC</td>\n",
+       "      <td>GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...</td>\n",
+       "      <td>1.336466</td>\n",
+       "      <td>110.407803</td>\n",
+       "      <td>54.557906</td>\n",
+       "      <td>706.317606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>383771</th>\n",
+       "      <td>110.569583</td>\n",
+       "      <td>0.870417</td>\n",
+       "      <td>19.441013</td>\n",
+       "      <td>P.199 Serian</td>\n",
+       "      <td>P.199</td>\n",
+       "      <td>Sarawak</td>\n",
+       "      <td>Tebedu</td>\n",
+       "      <td>13</td>\n",
+       "      <td>32</td>\n",
+       "      <td>13_32</td>\n",
+       "      <td>76561.711928</td>\n",
+       "      <td>43064</td>\n",
+       "      <td>10.935072</td>\n",
+       "      <td>911</td>\n",
+       "      <td>17TH MILES FAMILY CLINIC</td>\n",
+       "      <td>GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...</td>\n",
+       "      <td>1.336466</td>\n",
+       "      <td>110.407803</td>\n",
+       "      <td>54.854650</td>\n",
+       "      <td>706.317606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>383772</th>\n",
+       "      <td>110.577916</td>\n",
+       "      <td>0.870417</td>\n",
+       "      <td>22.962774</td>\n",
+       "      <td>P.199 Serian</td>\n",
+       "      <td>P.199</td>\n",
+       "      <td>Sarawak</td>\n",
+       "      <td>Tebedu</td>\n",
+       "      <td>13</td>\n",
+       "      <td>32</td>\n",
+       "      <td>13_32</td>\n",
+       "      <td>76561.711928</td>\n",
+       "      <td>43064</td>\n",
+       "      <td>12.915972</td>\n",
+       "      <td>911</td>\n",
+       "      <td>17TH MILES FAMILY CLINIC</td>\n",
+       "      <td>GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...</td>\n",
+       "      <td>1.336466</td>\n",
+       "      <td>110.407803</td>\n",
+       "      <td>55.165358</td>\n",
+       "      <td>706.317606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>383773</th>\n",
+       "      <td>110.586250</td>\n",
+       "      <td>0.870417</td>\n",
+       "      <td>25.920992</td>\n",
+       "      <td>P.199 Serian</td>\n",
+       "      <td>P.199</td>\n",
+       "      <td>Sarawak</td>\n",
+       "      <td>Tebedu</td>\n",
+       "      <td>13</td>\n",
+       "      <td>32</td>\n",
+       "      <td>13_32</td>\n",
+       "      <td>76561.711928</td>\n",
+       "      <td>43064</td>\n",
+       "      <td>14.579893</td>\n",
+       "      <td>911</td>\n",
+       "      <td>17TH MILES FAMILY CLINIC</td>\n",
+       "      <td>GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...</td>\n",
+       "      <td>1.336466</td>\n",
+       "      <td>110.407803</td>\n",
+       "      <td>55.489796</td>\n",
+       "      <td>706.317606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>383774</th>\n",
+       "      <td>110.569583</td>\n",
+       "      <td>0.862084</td>\n",
+       "      <td>18.544966</td>\n",
+       "      <td>P.199 Serian</td>\n",
+       "      <td>P.199</td>\n",
+       "      <td>Sarawak</td>\n",
+       "      <td>Tebedu</td>\n",
+       "      <td>13</td>\n",
+       "      <td>32</td>\n",
+       "      <td>13_32</td>\n",
+       "      <td>76561.711928</td>\n",
+       "      <td>43064</td>\n",
+       "      <td>10.431068</td>\n",
+       "      <td>911</td>\n",
+       "      <td>17TH MILES FAMILY CLINIC</td>\n",
+       "      <td>GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...</td>\n",
+       "      <td>1.336466</td>\n",
+       "      <td>110.407803</td>\n",
+       "      <td>55.730885</td>\n",
+       "      <td>706.317606</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>383775 rows × 20 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               lon       lat          Z      parlimen code_parlimen    state  \\\n",
+       "0       117.002916  7.353750   5.966960   P.167 Kudat         P.167    Sabah   \n",
+       "1       117.186250  7.353750  26.301926   P.167 Kudat         P.167    Sabah   \n",
+       "2       117.211250  7.353750  36.780006   P.167 Kudat         P.167    Sabah   \n",
+       "3       117.219583  7.353750  47.685280   P.167 Kudat         P.167    Sabah   \n",
+       "4       117.227916  7.353750  46.979156   P.167 Kudat         P.167    Sabah   \n",
+       "...            ...       ...        ...           ...           ...      ...   \n",
+       "383770  110.561250  0.870417  20.286165  P.199 Serian         P.199  Sarawak   \n",
+       "383771  110.569583  0.870417  19.441013  P.199 Serian         P.199  Sarawak   \n",
+       "383772  110.577916  0.870417  22.962774  P.199 Serian         P.199  Sarawak   \n",
+       "383773  110.586250  0.870417  25.920992  P.199 Serian         P.199  Sarawak   \n",
+       "383774  110.569583  0.862084  18.544966  P.199 Serian         P.199  Sarawak   \n",
+       "\n",
+       "       district  code_state  code_district code_state_district     parlimen_z  \\\n",
+       "0         Kudat          12             13               12_13  129387.352540   \n",
+       "1         Kudat          12             13               12_13  129387.352540   \n",
+       "2         Kudat          12             13               12_13  129387.352540   \n",
+       "3         Kudat          12             13               12_13  129387.352540   \n",
+       "4         Kudat          12             13               12_13  129387.352540   \n",
+       "...         ...         ...            ...                 ...            ...   \n",
+       "383770   Tebedu          13             32               13_32   76561.711928   \n",
+       "383771   Tebedu          13             32               13_32   76561.711928   \n",
+       "383772   Tebedu          13             32               13_32   76561.711928   \n",
+       "383773   Tebedu          13             32               13_32   76561.711928   \n",
+       "383774   Tebedu          13             32               13_32   76561.711928   \n",
+       "\n",
+       "        str_count  estimated_str   id               clinic_name  \\\n",
+       "0           31847       1.468689  964        KLINIK DR ZULFIKAR   \n",
+       "1           31847       6.473874  964        KLINIK DR ZULFIKAR   \n",
+       "2           31847       9.052916  964        KLINIK DR ZULFIKAR   \n",
+       "3           31847      11.737106  964        KLINIK DR ZULFIKAR   \n",
+       "4           31847      11.563303  964        KLINIK DR ZULFIKAR   \n",
+       "...           ...            ...  ...                       ...   \n",
+       "383770      43064      11.410448  911  17TH MILES FAMILY CLINIC   \n",
+       "383771      43064      10.935072  911  17TH MILES FAMILY CLINIC   \n",
+       "383772      43064      12.915972  911  17TH MILES FAMILY CLINIC   \n",
+       "383773      43064      14.579893  911  17TH MILES FAMILY CLINIC   \n",
+       "383774      43064      10.431068  911  17TH MILES FAMILY CLINIC   \n",
+       "\n",
+       "                                                  address  Latitude  \\\n",
+       "0       LOT 71, GROUND FLOOR, WISMA TELIPOK RIA, JALAN...  6.108500   \n",
+       "1       LOT 71, GROUND FLOOR, WISMA TELIPOK RIA, JALAN...  6.108500   \n",
+       "2       LOT 71, GROUND FLOOR, WISMA TELIPOK RIA, JALAN...  6.108500   \n",
+       "3       LOT 71, GROUND FLOOR, WISMA TELIPOK RIA, JALAN...  6.108500   \n",
+       "4       LOT 71, GROUND FLOOR, WISMA TELIPOK RIA, JALAN...  6.108500   \n",
+       "...                                                   ...       ...   \n",
+       "383770  GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...  1.336466   \n",
+       "383771  GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...  1.336466   \n",
+       "383772  GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...  1.336466   \n",
+       "383773  GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...  1.336466   \n",
+       "383774  GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...  1.336466   \n",
+       "\n",
+       "         Longitude    distance         area  \n",
+       "0       116.205800  164.075215  1378.634642  \n",
+       "1       116.205800  175.768384  1378.634642  \n",
+       "2       116.205800  177.482178  1378.634642  \n",
+       "3       116.205800  178.059288  1378.634642  \n",
+       "4       116.205800  178.639274  1378.634642  \n",
+       "...            ...         ...          ...  \n",
+       "383770  110.407803   54.557906   706.317606  \n",
+       "383771  110.407803   54.854650   706.317606  \n",
+       "383772  110.407803   55.165358   706.317606  \n",
+       "383773  110.407803   55.489796   706.317606  \n",
+       "383774  110.407803   55.730885   706.317606  \n",
+       "\n",
+       "[383775 rows x 20 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import plotly.figure_factory as ff\n",
-    "        \n"
+    "population"
    ]
   },
   {
