Noted got s after the clinic name

--- a/clean_spm.ipynb
+++ b/clean_spm.ipynb
@@ -138880,7 +138880,9 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "px.scatter_mapbox()"
+   ]
   },
   {
    "cell_type": "code",
