forget what changed

--- a/final_script.ipynb
+++ b/final_script.ipynb
@@ -412,6 +412,36 @@
     "merger.write(\"data/22110451_correction.pdf\")\n",
     "merger.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "import pandas as pd\n",
+    "import polars as pl\n",
+    "import numpy as np\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "import plotly.figure_factory as ff\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "import sys\n",
+    "# To ensure the function can be import\n",
+    "if os.path.dirname(os.getcwd()) not in sys.path:\n",
+    "    sys.path.append(os.path.dirname(os.getcwd()))\n",
+    "# Import own function packages\n",
+    "import spm\n",
+    "# To set the environement to get access to password protected file\n",
+    "load_dotenv()\n",
+    "\n",
+    "df = pl.read_parquet(spm.file._population_str_ascii_gp_households)\n",
+    "df.join(df.group_by(\"district\").agg((pl.col(\"Z\").sum()).alias(\"district_z\")),\n",
+    "        how=\"left\",on=\"district\").drop([\"str_count\", \"estimated_str\"])\\\n",
+    "            .write_parquet(f\"data/information/ascii_gp_district_parlimen.parquet\", use_pyarrow=True)"
+   ]
   }
  ],
  "metadata": {
@@ -430,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
